--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.1.2",
 		"@fortawesome/free-solid-svg-icons": "^6.1.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@hookform/resolvers": "^2.9.7",
 		"bootstrap": "^5.2.0",
 		"bootstrap-icons": "^1.9.1",
 		"hamburger-react": "^2.5.0",
@@ -89,6 +90,7 @@
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-scroll": "^1.8.7",
-		"switch": "^0.0.0"
+		"switch": "^0.0.0",
+		"yup": "^0.32.11"
 	}
 }
